# python-project-template

./: mypy.ini  pyproject.toml  tasks.py
.devcontainer/: Dockerfile
.github/workflows/: workflow.yml
{{cookiecutter.project_slug}}/: .gitignore  pyproject.toml
{{cookiecutter.project_slug}}/.devcontainer/: devcontainer.json
