[tool.poetry]
name = "python-devcontainer"
version = "0.1.0"
description = ""
authors = ["Adam Vandergriff <adam.vandergriff@gmail.com>"]
readme = "README.md"
packages = [{include = "python_devcontainer"}]

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.25.2"
pandas = "^2.0.3"

[tool.poetry.group.dev.dependencies]
flake8 = "^6.1.0"
mypy = "^1.5.1"
black = "^23.7.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
