[tool.poetry]
name = "python-devcontainer"
version = "0.1.0"
description = ""
authors = ["Adam Vandergriff <adam.vandergriff@gmail.com>"]
readme = "README.md"
packages = [{include = "python_devcontainer"}]

[tool.isort]
profile = "black"
src_paths = ["src", "tests"]

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.25.2"
pandas = "^2.0.3"

[tool.poetry.group.dev.dependencies]
flake8 = "^6.1.0"
mypy = "^1.5.1"
black = "^23.7.0"
invoke = "^2.2.0"
pytest = "^7.4.0"
pytest-mock = "^3.11.1"
pytest-cov = "^4.1.0"
isort = "^5.12.0"
pre-commit = "^3.3.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
